# mvr_ws

./: .gitignore
devel/: .catkin  .rosinstall  local_setup.fish
devel/include/mvr_robot_control/: ActionData.h  MotorData.h  ObserveData.h
devel/include/yesense_imu/: YesenseIMUSetting.h  YesenseImuAllData.h  YesenseImuGnssData.h  YesenseImuMasterGnssData.h  YesenseImuUtcTime.h  YesenseNodeConfig.h
devel/lib/mvr_robot_control/: mvr_robot_control
devel/lib/pkgconfig/: mvr_bot_gazebo.pc  mvr_robot_control.pc  serial.pc  yesense_imu.pc
devel/lib/python3/dist-packages/mvr_robot_control/msg/: _ActionData.py  _MotorData.py  _ObserveData.py  __init__.py
devel/lib/python3/dist-packages/yesense_imu/cfg/: YesenseNodeConfig.py
devel/lib/python3/dist-packages/yesense_imu/msg/: _YesenseIMUSetting.py  _YesenseImuAllData.py  _YesenseImuGnssData.py  _YesenseImuMasterGnssData.py  _YesenseImuUtcTime.py  __init__.py
devel/lib/serial/: serial_example
devel/lib/yesense_imu/: yesense_imu_node
devel/share/common-lisp/ros/mvr_robot_control/msg/: ActionData.lisp  MotorData.lisp  ObserveData.lisp  _package.lisp  _package_ActionData.lisp  _package_MotorData.lisp  _package_ObserveData.lisp  mvr_robot_control-msg.asd
devel/share/common-lisp/ros/yesense_imu/msg/: YesenseIMUSetting.lisp  YesenseImuAllData.lisp  YesenseImuGnssData.lisp  YesenseImuMasterGnssData.lisp  YesenseImuUtcTime.lisp  _package.lisp  _package_YesenseIMUSetting.lisp  _package_YesenseImuMasterGnssData.lisp  yesense_imu-msg.asd
devel/share/gennodejs/ros/mvr_robot_control/msg/: ActionData.js  _index.js  (+2 more)
devel/share/mvr_bot_gazebo/cmake/: mvr_bot_gazeboConfig.cmake
devel/share/mvr_robot_control/cmake/: mvr_robot_control-msg-extras.cmake  mvr_robot_control-msg-paths.cmake  mvr_robot_controlConfig.cmake
devel/share/roseus/ros/mvr_robot_control/: manifest.l
devel/share/roseus/ros/yesense_imu/: manifest.l
devel/share/serial/cmake/: serialConfig.cmake
devel/share/yesense_imu/cmake/: yesense_imu-msg-extras.cmake  yesense_imu-msg-paths.cmake  yesense_imuConfig.cmake
src/model/: policy_1.pt
src/mvr_bot_gazebo/: CMakeLists.txt  package.xml
src/mvr_bot_gazebo/config/: mvr_bot_control.yaml
src/mvr_bot_gazebo/launch/: gazebo_effort.launch  mvr_bot_world.launch
src/mvr_bot_gazebo/msg/: ActionData.msg  MotorData.msg
src/mvr_bot_gazebo/scripts/: sim_bridge.py
src/mvr_bot_gazebo/urdf/: v3all_nocol_gazebo.urdf
src/mvr_robot_control/: CMakeLists.txt  package.xml
src/mvr_robot_control/app/: CMakeLists.txt  motor_control.c  transmit.cpp  transmit.h
src/mvr_robot_control/config/: default_positions.yaml  default_positions_hunter.yaml  joint_limits.yaml  joint_limits_hunter.yaml  joint_pds.yaml  joint_pds_10dof.yaml  joint_pds_hunter.yaml
src/mvr_robot_control/data/: episode_data_Dec09_12-00-16.csv  generated_output.csv  record_20dof.csv  record_20dof_v2.csv  record_22dof.csv  record_22dof_v6.csv  record_22dof_v7.csv  record_22dof_v8.csv  record_22dof_v9.csv  record_HG_v1.csv  record_HG_v2.csv  record_LIPM_10dof_v1.csv  record_LIPM_10dof_v2.csv  record_LIPM_12dof_v1.csv  record_LIPM_22dof_v1.csv  record_ankle.csv  record_ankle_pitch.csv  record_ankle_pitch_v2.csv  record_ankle_pitch_v3.csv  record_ankle_pitch_v4.csv  record_ankle_v2.csv  record_arms.csv  record_arms_yaw.csv  record_arms_yaw_0.csv  record_hip_pitch_v2.csv  record_hip_pitch_v3.csv  record_hip_pitch_v4.csv  record_hip_yaw.csv  record_hunter_v1.csv  record_hunter_v2.csv  record_knee.csv  record_knee_v2.csv  record_knee_v3.csv  record_knee_v4.csv  record_left_arm_pitch_high_v4.csv  record_left_arm_yaw.csv  record_legs_5dof.csv  record_legs_5dof_v2.csv  record_legs_5dof_v3.csv  record_legs_5dof_v4.csv  (+13 more)
src/mvr_robot_control/gazebo_sim/config/: controllers.yaml
src/mvr_robot_control/gazebo_sim/launch/: env.launch  gazebo.launch
src/mvr_robot_control/gazebo_sim/scripts/: sim_bridge.py
src/mvr_robot_control/include/mvr_robot_control/: BotHW.h  BotHW_10dof.h  HunterHW.h  MechanismSolver.h
src/mvr_robot_control/launch/: one_start_hunter_hw.launch  one_start_mvr_hw.launch  one_start_mvr_hw_10dof.launch
src/mvr_robot_control/meshes/: head_link.STL  left_ankle_pitch_link.STL  left_ankle_roll_link.STL  left_arm_pitch_higher_link.STL  left_arm_pitch_lower_link.STL  left_arm_roll_link.STL  left_arm_yaw_link.STL  right_ankle_pitch_link.STL  right_ankle_roll_link.STL  right_arm_pitch_higher_link.STL  right_arm_pitch_lower_link.STL  right_arm_roll_link.STL  right_arm_yaw_link.STL
src/mvr_robot_control/model/: policy_1_20dof.pt  policy_1_20dof_v2.pt  policy_1_20dof_v3.pt  policy_1_20dof_v4.pt  policy_1_22dof.pt  policy_1_22dof_left_hip_pitch.pt  policy_1_22dof_left_knee.pt  policy_1_22dof_right_hip_pitch.pt  policy_1_22dof_right_knee.pt  policy_1_22dof_v2.pt  policy_1_22dof_v3.pt  policy_1_22dof_v4.pt  policy_1_22dof_v5.pt  policy_1_22dof_v6.pt  policy_1_22dof_v7.pt  policy_1_22dof_v8.pt  policy_1_22dof_v9.pt  policy_1_LIPM_10dof_v1.pt  policy_1_LIPM_10dof_v2.pt  policy_1_LIPM_12dof_v1.pt  policy_1_LIPM_22dof_v1.pt  policy_1_ankle.pt  policy_1_ankle_pitch.pt  policy_1_ankle_pitch_v2.pt  policy_1_ankle_pitch_v4.pt  policy_1_ankle_v2.pt  policy_1_ankle_v3.pt  policy_1_arms.pt  policy_1_arms_yaw.pt  policy_1_arms_yaw_0.pt  policy_1_head.pt  policy_1_head_new.pt  policy_1_hip_pitch.pt  policy_1_hip_pitch_v2.pt  policy_1_hip_pitch_v3.pt  policy_1_hip_pitch_v4.pt  policy_1_hip_yaw.pt  policy_1_knee.pt  policy_1_knee_v2.pt  policy_1_knee_v3.pt  (+27 more)
src/mvr_robot_control/msg/: ActionData.msg  ActionData_10dof.msg  ObserveData.msg  ObserveData_10dof.msg  TestData.msg
src/mvr_robot_control/scripts/: RL_Command.py  RL_Command_10dof.py  RL_Command_HG.py  RL_Command_LIPM.py  RL_Command_hunter.py  RL_Command_ori.py  Single_Frame_Test.py  sim_bridge.py
src/mvr_robot_control/src/: AnkleCmdPub.cpp  AnkleTest.cpp  BotControlLoop.cpp  BotControlLoop_10dof.cpp  BotHW.cpp  BotHW_10dof.cpp  HunterControlLoop.cpp  HunterHW.cpp  MechanismSolver.cpp
src/mvr_robot_control/urdf/: v3all_nocol.urdf  v3all_nocol_fix_gait.urdf  v3all_nocol_gazebo.urdf  v3alln.urdf  v3alln_gazebo.urdf
(+14 files in other folders)
